--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
-    "axios": "^0.18.0",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
@@ -21,7 +21,7 @@
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^3.5.0",
     "express-validator": "^6.4.0",
-    "gravatar": "^1.8.0",
+    "gravatar": "^1.8.1",
     "helmet": "^3.16.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
@@ -31,15 +31,16 @@
     "slugify": "^1.3.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2",
-    "eslint": "^5.16.0",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
+    "nodemon": "^2.0.2",
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.17.0"
   }
